# Real-Time-Edge-Detection-Viewer

android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/example/flamassignment/: MainActivity.kt
android/app/src/main/java/com/example/flamassignment/gl/: EdgeGLRenderer.kt
android/app/src/main/res/layout/: activity_main.xml
